--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -60,7 +60,7 @@
   <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
   <init-param>
    <param-name>services</param-name>
-   <param-value>com.goodow.realtime.server.auth.AccountEndpoint,com.goodow.realtime.server.device.ApplePushNotification,com.goodow.realtime.server.device.DeviceInfoEndpoint,com.goodow.realtime.server.device.GoogleCloudMessaging,com.goodow.realtime.server.presence.PresenceEndpoint</param-value>
+   <param-value>com.goodow.realtime.server.auth.AccountEndpoint,com.goodow.realtime.server.presence.AppEngineChannelService,com.goodow.realtime.server.presence.ApplePushNotification,com.goodow.realtime.server.device.DeviceEndpoint,com.goodow.realtime.server.presence.GoogleCloudMessaging,com.goodow.realtime.server.presence.PresenceEndpoint</param-value>
   </init-param>
  </servlet>
  <servlet-mapping>
