--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,8 @@
   <filter-mapping>
     <filter-name>guiceFilter</filter-name>
     <url-pattern>*</url-pattern>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
   </filter-mapping>
   <listener>
     <listener-class>com.goodow.realtime.server.RealtimeServletContextListener</listener-class>
@@ -60,7 +62,7 @@
   <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
   <init-param>
    <param-name>services</param-name>
-   <param-value>com.goodow.realtime.server.auth.AccountEndpoint,com.goodow.realtime.server.presence.AppEngineChannelService,com.goodow.realtime.server.presence.ApplePushNotification,com.goodow.realtime.server.device.DeviceEndpoint,com.goodow.realtime.server.presence.GoogleCloudMessaging,com.goodow.realtime.server.presence.PresenceEndpoint</param-value>
+   <param-value>com.goodow.realtime.server.auth.AccountEndpoint,com.goodow.realtime.server.device.DeviceEndpoint,com.goodow.realtime.server.presence.AppEngineChannelService,com.goodow.realtime.server.presence.ApplePushNotification,com.goodow.realtime.server.presence.GoogleCloudMessaging,com.goodow.realtime.server.presence.PresenceEndpoint</param-value>
   </init-param>
  </servlet>
  <servlet-mapping>
