--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
     <artifactId>realtime-parent</artifactId>
     <version>0.3.0-SNAPSHOT</version>
   </parent>
-  <artifactId>realtime-server</artifactId>
+  <artifactId>realtime-server-appengine</artifactId>
   <packaging>war</packaging>
-  <url>https://github.com/goodow/realtime-server/</url>
+  <url>https://github.com/goodow/realtime-server-appengine/</url>
   <inceptionYear>2013</inceptionYear>
   <licenses>
     <license>
